<resources>
    <string name="app_name">Rentar Activos</string>
    <!--PARA LOGIN-->
    <string name="LoginApp_name">Iniciar Sesión</string>
    <string name="Login_btn">Iniciar sesión</string>
    <string name="Login_name">Usuario</string>
    <string name="Login_pass">Contraseña</string>
    <string name="Login_emp">Empresa</string>
    <string name="Login_depto">Departamento</string>
    <string name="error_Login">Alguno de los Campos es Incorrecto!</string>
    <!--PARA MENU PRINCIPAL-->
    <string name="MenuName">Menu Principal</string>
    <string name="btnMp_Rentar">Solicitar Renta</string>
    <string name="btnMp_RegDev">Registrar Devolución</string>
    <string name="btnMp_CloseS">Cerrar Sesión</string>
    <!--PARA RENTAS-->
    <string name="RentaName">Rentas</string>
    <string name="btn_Rentar">Rentar</string>
    <!--PARA DEVOLUCIONES-->
    <string name="DevName">Devoluciones</string>
    <string name="btn_Devolver">Devolver</string>
    <!--UNIVERSALES-->
    <string name="lblProd">ID Del Producto</string>
    <string name="lbltiempo">Tiempo De Renta</string>
    <string name="lbldia">Días</string>
    <string name="btnRegresar">Regresar al Menú</string>
    <string name="txtName">Nombre</string>
    <string name="txtDescrip">Descripción</string>

    <string-array name="ListaPrueba">
        <item>Seleccionar...</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="ListaPrueba2">
        <item>Seleccionar...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_renta_de_activos">Renta De Activos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
