<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarybg"
    tools:context="edd.proyecto1_android.MainActivity"
    tools:layout_editor_absoluteY="510dp"
    tools:layout_editor_absoluteX="383dp"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:width="100dp"
        android:height="35dp"
        android:background="@color/colorPrimaryDark"
        android:linksClickable="false"
        android:text="@string/Login_btn"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" /><![CDATA[

    EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="autoCompleteText"
        android:text="Nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="50dp"
        app:layout_constraintHorizontal_bias="0.502" />

    ]]>

    <AutoCompleteTextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Login_name"
        android:layout_marginBottom="49dp"
        android:width="200dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/txtPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/Login_pass"
        android:inputType="textPassword"
        android:autoText="true"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="45dp"
        android:width="200dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmpresa"
        tools:ignore="Deprecated,LabelFor" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />

    <ProgressBar
        android:id="@+id/Login_Progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="383dp"
        android:layout_height="19dp"
        tools:layout_editor_absoluteY="-8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:visibility="gone"/>

    <AutoCompleteTextView
        android:id="@+id/txtEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:width="200dp"
        android:hint="@string/Login_emp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/txtDepto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:maxLines="1" />

    <AutoCompleteTextView
        android:id="@+id/txtDepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:width="200dp"
        android:hint="@string/Login_depto"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:maxLines="1" />




</android.support.constraint.ConstraintLayout>
